Feat: add attribute 'alt' ing img

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <a class="linkApp"
                             href="https://play.google.com/store/apps/details?id=br.gov.datasus.guardioes&hl=pt-br"
                             target="_blank">
-                            <img src="./assets/icons/goolgePlay.svg" alt="">
+                            <img src="./assets/icons/goolgePlay.svg" alt="App Covide">
                             <div class="linkAppText">
                                 <span>Dispinível na</span>
                                 <span>Google Play</span>
