--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#general">Geral</a></li>
                     <li><a href="#infectedByState">Infectados por estado</a></li>
                     <li><a href="#deathsByState">Óbitos por estado</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#moreInfo">Mais</a></li>
                 </ul>
             </nav>
         </div>
@@ -104,7 +104,7 @@
             </div>
         </secttion>
 
-        <section class="moreInfo infectedSection">
+        <section id="moreInfo" class="moreInfo infectedSection">
             <div class="contentTitle">
                 <div class="moreInfoleftLine" style="background-color: #12BF81;"></div>
                 <h3><span>Mais </span> <span>informações</span></h3>
